--- a/templates/painel_backup_13jul.html
+++ b/templates/painel_backup_13jul.html
@@ -50,7 +50,8 @@
 		<option value="Caminhando">Caminhando</option>
 	</select>
 		
-    <canvas id="graficoBarras" style="max-width: 600px;"></canvas>
+    <canvas id="graficoBarras" style="width: 200px; height: 100px;"></canvas>
+
 
 
     <div id="indicadores" style="display: flex; gap: 20px; margin-bottom: 20px;">
@@ -62,22 +63,32 @@
 </div>
 
 	<h2>🍕 Distribuição das Ações</h2>
-	<canvas id="graficoPizza" style="max-width: 500px;"></canvas>
+	<div style="width: 300px; height: 300px; margin: 0 auto;">
+		<canvas id="graficoPizza" style="width: 100%; height: 100%;"></canvas>
+	</div>
+
+
 
 	<h2>⏱️ Alertas por Hora</h2>
-	<canvas id="graficoLinha" style="max-width: 600px;"></canvas>
+	<canvas id="graficoLinha" style="width: 200px; height: 100px;"></canvas>
+
 
 	<h2>📚 Ações por Funcionário (Barras Empilhadas)</h2>
-	<canvas id="graficoEmpilhado" style="max-width: 800px;"></canvas>
+	<canvas id="graficoEmpilhado" style="width: 200px; height: 100px;"></canvas>
+
 
 	<h2>📡 Perfil de Ações por Funcionário</h2>
-	<canvas id="graficoRadar" style="max-width: 600px;"></canvas>
+	<div style="width: 400px; height: 400px; margin: 0 auto;">
+		<canvas id="graficoRadar" style="width: 100%; height: 100%;"></canvas>
+	</div>
+
 
 	<h2>📈 Evolução Temporal dos Alertas</h2>
-	<canvas id="graficoTempo" style="max-width: 700px;"></canvas>
+	<canvas id="graficoTempo" style="width: 200px; height: 100px;"></canvas>
+
 
 	<h2>📊 Evolução Empilhada das Ações</h2>
-	<canvas id="graficoArea" style="max-width: 800px;"></canvas>
+	<canvas id="graficoArea" style="width: 200px; height: 100px;"></canvas>
 
 
 
@@ -121,6 +132,15 @@
                 dadosBrutos = data;
                 atualizarFiltros(data);   // preenche filtros só uma vez
                 aplicarFiltros();         // atualiza com filtros ativos
+				atualizarIndicadores();
+                gerarGraficoAlertas();
+				gerarGraficoPizza();
+				gerarGraficoLinha();
+				gerarGraficoEmpilhado();
+				gerarGraficoRadar();	
+				gerarGraficoTemporal();		
+				gerarGraficoAreaEmpilhada();
+				
             });
     }
 
@@ -267,6 +287,7 @@
         },
         options: {
             responsive: true,
+			
             plugins: {
                 legend: {
                     position: 'bottom'
@@ -443,6 +464,7 @@ function gerarGraficoRadar() {
         },
         options: {
             responsive: true,
+			
             plugins: {
                 legend: { position: 'top' },
                 title: {
@@ -651,7 +673,8 @@ function gerarGraficoAreaEmpilhada() {
 				gerarGraficoEmpilhado();
 				gerarGraficoRadar();	
 				gerarGraficoTemporal();		
-				gerarGraficoAreaEmpilhada();				
+				gerarGraficoAreaEmpilhada();
+							
 		
     }
 
